syntax = "proto3";

package powermanage.v1;

option go_package = "github.com/manchtools/power-manage/sdk/gen/go/powermanage/v1;powermanagev1";

import "google/protobuf/timestamp.proto";

// =============================================================================
// AUTHENTICATION SERVICE (WebAuthn/Passkey)
// =============================================================================

service AuthService {
  // Begin passkey registration (requires registration code)
  rpc BeginRegistration(BeginRegistrationRequest) returns (BeginRegistrationResponse);

  // Complete passkey registration
  rpc FinishRegistration(FinishRegistrationRequest) returns (FinishRegistrationResponse);

  // Begin passkey login
  rpc BeginLogin(BeginLoginRequest) returns (BeginLoginResponse);

  // Complete passkey login
  rpc FinishLogin(FinishLoginRequest) returns (FinishLoginResponse);

  // Logout (invalidate session)
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // Get current session info
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
}

// =============================================================================
// REGISTRATION FLOW
// =============================================================================

message BeginRegistrationRequest {
  // Registration code provided by admin
  // @gotags: validate:"required,min=1"
  string registration_code = 1;
}

message BeginRegistrationResponse {
  // WebAuthn options as JSON (to be parsed by browser)
  string options_json = 1;
  // Session ID for finishing registration
  string session_id = 2;
  // Username being registered (from registration code)
  string username = 3;
}

message FinishRegistrationRequest {
  // Session ID from BeginRegistration
  // @gotags: validate:"required,min=1"
  string session_id = 1;
  // Attestation response from browser as JSON
  // @gotags: validate:"required,json"
  string attestation_json = 2;
}

message FinishRegistrationResponse {
  bool success = 1;
  optional string error_message = 2;
  // User info on success
  optional User user = 3;
}

// =============================================================================
// LOGIN FLOW
// =============================================================================

message BeginLoginRequest {
  // Username is optional for discoverable credentials
  optional string username = 1;
}

message BeginLoginResponse {
  // WebAuthn options as JSON
  string options_json = 1;
  // Session ID for finishing login
  string session_id = 2;
}

message FinishLoginRequest {
  // Session ID from BeginLogin
  // @gotags: validate:"required,min=1"
  string session_id = 1;
  // Assertion response from browser as JSON
  // @gotags: validate:"required,json"
  string assertion_json = 2;
}

message FinishLoginResponse {
  bool success = 1;
  optional string error_message = 2;
  // Session info on success
  optional Session session = 3;
}

// =============================================================================
// SESSION MANAGEMENT
// =============================================================================

message LogoutRequest {
  // Empty - uses session cookie
}

message LogoutResponse {
  bool success = 1;
}

message GetSessionRequest {
  // Empty - uses session cookie
}

message GetSessionResponse {
  bool authenticated = 1;
  optional Session session = 2;
}

// =============================================================================
// DATA TYPES
// =============================================================================

// User roles
enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_USER = 1;    // Can view, limited actions
  USER_ROLE_ADMIN = 2;   // Full access
}

// User information
message User {
  string id = 1;
  string username = 2;
  string display_name = 3;
  UserRole role = 4;
  // Identity provider (for future OIDC/SAML support)
  string identity_provider = 5;  // "local", "oidc:google", "saml:okta"
  // External ID from identity provider (sub claim, etc.)
  optional string external_id = 6;
  google.protobuf.Timestamp created_at = 7;
  optional google.protobuf.Timestamp last_login_at = 8;
}

// Session information
message Session {
  string id = 1;
  User user = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp expires_at = 4;
}

// WebAuthn credential info (for listing/revocation)
message WebAuthnCredential {
  string id = 1;
  string name = 2;  // User-friendly name
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp last_used_at = 4;
  // AAGUID can identify the authenticator type
  optional string aaguid = 5;
}
