syntax = "proto3";

package powermanage.v1;

option go_package = "github.com/manchtools/power-manage/sdk/gen/go/powermanage/v1;powermanagev1";

import "google/protobuf/timestamp.proto";
import "powermanage/v1/devices.proto";

// =============================================================================
// DEVICE GROUP SERVICE
// =============================================================================

service DeviceGroupService {
  // Create a new device group
  rpc CreateDeviceGroup(CreateDeviceGroupRequest) returns (CreateDeviceGroupResponse);

  // Get device group by ID
  rpc GetDeviceGroup(GetDeviceGroupRequest) returns (GetDeviceGroupResponse);

  // List device groups
  rpc ListDeviceGroups(ListDeviceGroupsRequest) returns (ListDeviceGroupsResponse);

  // Update device group
  rpc UpdateDeviceGroup(UpdateDeviceGroupRequest) returns (UpdateDeviceGroupResponse);

  // Delete device group
  rpc DeleteDeviceGroup(DeleteDeviceGroupRequest) returns (DeleteDeviceGroupResponse);

  // Preview which devices match a query (without creating group)
  rpc PreviewDeviceGroup(PreviewDeviceGroupRequest) returns (PreviewDeviceGroupResponse);

  // Get current members of a group
  rpc GetDeviceGroupMembers(GetDeviceGroupMembersRequest) returns (GetDeviceGroupMembersResponse);
}

// =============================================================================
// DEVICE QUERY (Dynamic Membership)
// =============================================================================

// How to match a condition
enum MatchOperator {
  MATCH_OPERATOR_UNSPECIFIED = 0;
  MATCH_OPERATOR_EQUALS = 1;           // Exact match
  MATCH_OPERATOR_NOT_EQUALS = 2;       // Not equal
  MATCH_OPERATOR_CONTAINS = 3;         // String contains
  MATCH_OPERATOR_STARTS_WITH = 4;      // String starts with
  MATCH_OPERATOR_ENDS_WITH = 5;        // String ends with
  MATCH_OPERATOR_MATCHES = 6;          // Regex match
  MATCH_OPERATOR_EXISTS = 7;           // Label key exists (value ignored)
  MATCH_OPERATOR_NOT_EXISTS = 8;       // Label key does not exist
}

// Single condition in a query
message DeviceQueryCondition {
  // Field to match against
  // Supported: "hostname", "os_info", "status", "labels.<key>"
  string field = 1;
  MatchOperator operator = 2;
  string value = 3;  // For EXISTS/NOT_EXISTS, this is ignored
}

// How to combine conditions
enum QueryLogic {
  QUERY_LOGIC_UNSPECIFIED = 0;
  QUERY_LOGIC_AND = 1;  // All conditions must match
  QUERY_LOGIC_OR = 2;   // Any condition must match
}

// Query for dynamic device membership
message DeviceQuery {
  repeated DeviceQueryCondition conditions = 1;
  QueryLogic logic = 2;  // How to combine conditions (default AND)
}

// =============================================================================
// DEVICE GROUP DATA
// =============================================================================

message DeviceGroup {
  string id = 1;
  string name = 2;
  string description = 3;
  DeviceQuery query = 4;

  // Cached member count (updated periodically)
  int32 member_count = 10;

  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
}

// =============================================================================
// DEVICE GROUP CRUD
// =============================================================================

message CreateDeviceGroupRequest {
  string name = 1;
  string description = 2;
  DeviceQuery query = 3;
}

message CreateDeviceGroupResponse {
  DeviceGroup device_group = 1;
  // Initial member count
  int32 member_count = 2;
}

message GetDeviceGroupRequest {
  string group_id = 1;
}

message GetDeviceGroupResponse {
  DeviceGroup device_group = 1;
}

message ListDeviceGroupsRequest {
  int32 page_size = 1;
  string page_token = 2;
  // Search by name
  optional string search = 3;
}

message ListDeviceGroupsResponse {
  repeated DeviceGroup device_groups = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateDeviceGroupRequest {
  string group_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional DeviceQuery query = 4;
}

message UpdateDeviceGroupResponse {
  DeviceGroup device_group = 1;
  // Updated member count if query changed
  int32 member_count = 2;
}

message DeleteDeviceGroupRequest {
  string group_id = 1;
}

message DeleteDeviceGroupResponse {
  bool success = 1;
}

// =============================================================================
// PREVIEW & MEMBERSHIP
// =============================================================================

message PreviewDeviceGroupRequest {
  DeviceQuery query = 1;
  // Max devices to return for preview
  int32 limit = 2;
}

message PreviewDeviceGroupResponse {
  repeated Device matching_devices = 1;
  int32 total_matching = 2;
}

message GetDeviceGroupMembersRequest {
  string group_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message GetDeviceGroupMembersResponse {
  repeated Device devices = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}
